--- a/frontend/lets-circle-back-to-it-later/app/globals.css
+++ b/frontend/lets-circle-back-to-it-later/app/globals.css
@@ -3,7 +3,9 @@
 @tailwind utilities;
 
 body {
-  background-color: #0d0444;
+  background-color: #090330;
+  margin: 0;
+  padding: 0;
 }
 
 @layer base {
